--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,44 @@ body{font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #fff;}
 
+h1,h2,h3,p{margin-bottom: 0;
+    margin-top: 0;}
+
 a{text-decoration: none;}
 
-ul, ol{list-style: none;}
+ul, ol{
+   list-style: none;
+   margin: 0;
+   padding: 0;}
 
 button {cursor: pointer;}
 
 address{font-style: normal;}
 
+img{
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
+.container{
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
 .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
     margin: -1px;
     border: 0;
+    padding: 0;
 
     white-space: nowrap;
     clip-path: inset(100%);
@@ -22,21 +49,32 @@ address{font-style: normal;}
 
 /*=============header=============*/
 
-.header{}
+.header{
+    border-bottom: 1px solid #e7e9fc;
+}
 
-.header-nav{}
+.header-nav{
+    display: flex;
+    align-items: center;
+}
 
-.logo {font-family: "Raleway", sans-serif;
+.logo {
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4d5ae5;}
+    color: #4d5ae5;
+    margin-right: 76px;
+    }
 
 .logo-part {color: #2e2f42;}
 
-.header-menu-list{}
+.header-menu-list{
+    display: flex;
+    gap: 40px;
+}
 
 .header-menu-item{}
 
@@ -45,7 +83,9 @@ address{font-style: normal;}
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;}
+    color: #2e2f42;
+    padding: 24px 0;
+    display: block;}
 
 .header-menu-link:hover{color: #404bbf;}
 
@@ -54,7 +94,15 @@ address{font-style: normal;}
 .header-menu-link:active{color: #404bbf;
 text-decoration: underline;}
 
-.contact-list{}
+.contacts{
+    font-style: normal;
+    margin-left: auto;
+}
+
+.contacts-list{
+    display: flex;
+    gap: 40px;
+}
 
 .contact-item{}
 
@@ -71,7 +119,11 @@ text-decoration: underline;}
 
 /*===================HERO===============*/
 
-.hero {background: #2e2f42;}
+.hero {
+    background: #2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
+}
 
 .hero-title {
     font-weight: 700;
@@ -79,7 +131,11 @@ text-decoration: underline;}
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #fff}
+    color: #fff;
+    max-width: 496px;
+    margin: 0 auto;
+    padding-bottom: 48px;
+    }
 
 .hero-order-btn {
     font-weight: 500;
@@ -87,7 +143,14 @@ text-decoration: underline;}
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    background: #4d5ae5;}
+    background: #4d5ae5;
+    cursor: pointer;
+    display: block;
+    padding: 16px 32px;
+    border: none;
+    border-radius: 4px;
+    margin: 0 auto;
+}
 
 .hero-order-btn:hover {
     background: #404bbf;}
@@ -96,18 +159,27 @@ text-decoration: underline;}
 
 /*=====================FEATURES==================*/
 
-.features {}
+.features {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
-.features-list{}
+.features-list{
+    display: flex;
+    gap: 24px;
+}
 
-.features-item{}
+.features-item{
+    width: calc((100% - 3 * 24px) / 4);
+}
 
 .features-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42;}
+    color: #2e2f42;
+    margin-bottom: 8px;}
 
 .features-item-text {
     font-weight: 400;
@@ -118,7 +190,11 @@ text-decoration: underline;}
 
     /*====================TEAM===============*/
         
-.team {background: #f4f4fd;}
+.team {
+    background: #f4f4fd;
+    padding-top: 120px;
+    padding-bottom: 120px;  
+}
 
 .team-title {
     font-weight: 700;
@@ -127,13 +203,23 @@ text-decoration: underline;}
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
-    color: #2e2f42;}
+    color: #2e2f42;
+    margin-bottom: 72px;}
 
-.team-list{}
+.team-list{
+    display: flex;
+    gap: 24px;
+}
 
-.team-item{background: #fff;}
+.team-item{background: #fff;
+width: calc((100% - 3 * 24px) / 4);}
 
 .team-img {}
+
+.card-content{
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
 
 .team-subtitle {
     font-weight: 500;
@@ -141,7 +227,8 @@ text-decoration: underline;}
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2e2f42;}
+    color: #2e2f42;
+    margin-bottom: 8px;}
 
 .team-text {
     font-size: 16px;
@@ -152,7 +239,10 @@ text-decoration: underline;}
 
     /*====================Our Portfolio===================*/
 
-.portfolio {}
+.portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
     
 .portfolio-title {
      font-weight: 700;
@@ -161,20 +251,35 @@ text-decoration: underline;}
      letter-spacing: 0.02em;
      text-transform: capitalize;
      text-align: center;
-     color: #2e2f42;}
+     color: #2e2f42;
+    margin-bottom: 72px;}
     
-.portfolio-list {}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+}
     
-.portfolio-item {background: #fff;}
+.portfolio-item {background: #fff;
+width: calc((100% - 2 * 24px) / 3);}
     
 .portfolio-img {}
+
+.portfolio-card-content{
+    padding: 32px 16px;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+}
     
 .portfolio-subtitle {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42;}
+    color: #2e2f42;
+    margin-bottom: 8px;}
     
 .portfolio-text {
     font-size: 16px;
@@ -184,7 +289,10 @@ text-decoration: underline;}
 
 /*=====================FOOTER==================*/
 
-.footer {background: #2e2f42;}
+.footer {
+    background: #2e2f42;
+    padding-top: 100px;
+    padding-bottom: 100px;}
 
 .footer-logo {font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -192,7 +300,9 @@ text-decoration: underline;}
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4d5ae5;}
+    color: #4d5ae5;
+    padding-bottom: 24px;
+}
 
 .footer-logo-part {color: #f4f4fd;}
 
@@ -200,4 +310,5 @@ text-decoration: underline;}
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #f4f4fd;}
+    color: #f4f4fd;
+max-width: 264px;}
