--- a/css/styles.css
+++ b/css/styles.css
@@ -301,14 +301,16 @@ width: calc((100% - 2 * 24px) / 3);}
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    padding-bottom: 24px;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
-.footer-logo-part {color: #f4f4fd;}
+.footer-logo-part {color: #f4f4fd;
+}
 
 .footer-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-max-width: 264px;}
+    max-width: 264px;}
