--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,8 @@ text-decoration: underline;}
     background: #4d5ae5;
     cursor: pointer;
     display: block;
-    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
     border: none;
     border-radius: 4px;
     margin: 0 auto;
@@ -212,7 +213,8 @@ text-decoration: underline;}
 }
 
 .team-item{background: #fff;
-width: calc((100% - 3 * 24px) / 4);}
+width: calc((100% - 3 * 24px) / 4);
+border-radius: 0px 0px 4px 4px;}
 
 .team-img {}
 
